# YOLO-GRAD-CAM

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LIBRARY_DESIGN.md  LICENSE  Makefile  QUICK_TEST.md  README.md  TESTING_CHECKLIST.md  analyze.py  complete_test.py  edge_case_tests.py  final_test_script.py  improved_gradcam_cell.py  minimal_test.py  pyproject.toml  requirements.txt  test_basic_structure.py  test_gradcam_fix.py  test_gradient_fix.py  test_it_works.py  test_library.py  test_minimal.py  test_real_gradcam.py  test_structure.py
.github/workflows/: README.md  ci.yml  dependencies.yml  maintenance.yml  release.yml
examples/: basic_usage.py
gradcam_yolo_clean/: README.md  cli.py  colab_setup.py  notebook_test.py  requirements.txt
gradcam_yolo_clean/src/: gradcam_wrapper.py  utils.py  yolo_wrapper.py
gradcam_yolo_clean/tests/: test_gradcam_on_yolo.py
scripts/: manual_tests.py  run_tests.py  test_before_upload.py
src/yolocam/: __init__.py
src/yolocam/cam/: __init__.py  gradcam.py
src/yolocam/cli/: __init__.py  commands.py
src/yolocam/core/: __init__.py  analyzer.py  config.py  registry.py
src/yolocam/models/: __init__.py  base_model.py  yolo_wrapper.py
src/yolocam/tasks/: __init__.py  base_task.py  segmentation.py
src/yolocam/utils/: __init__.py  io.py  logging.py  validation.py
src/yolocam/visualization/: __init__.py
tests/: conftest.py
tests/integration/: test_analyzer_integration.py
tests/unit/: test_base_classes.py  test_config.py  test_registry.py
